--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
   "require": {
     "phpmailer/phpmailer": "^6.7.1"
-  }
+  },
+
+  "extra":{
+    "installer-paths":{
+      "./app/packages": ["phpmailer/phpmailer"]
+    }}
 }
