--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
-    "phpmailer/phpmailer": "^6.7.1"
+    "phpmailer/phpmailer": "^6.7.1",
+    "ext-dom": "*"
   },
 
   "extra":{
