--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "phpmailer/phpmailer": "^6.7.1",
-    "ext-dom": "*"
+    "ext-dom": "*",
+    "ext-pdo": "*"
   },
 
   "extra":{
