--- a/nginx.conf
+++ b/nginx.conf
@@ -7,10 +7,10 @@ http {
         listen 80 default_server;
         root /app/public;
 
-        index yummy_homepage.php index.html index.htm;
+        index index.php index.html index.htm;
 
         # uncomment line below to redirect all requests to yummy_homepage.php
-        try_files $uri $uri/ /yummy_homepage.php?$args;
+        try_files $uri $uri/ /index.php?$args;
 
         location ~ \.php$ {
             fastcgi_pass php:9000;
