--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "phpmailer/phpmailer": "^6.7.1",
     "ext-dom": "*",
-    "ext-openssl": "*"
+    "ext-openssl": "*",
+    "ext-decimal": "*"
   },
 
   "extra":{
